# Obschalka-Server

./: CMakeLists.txt
includes/: main.h  websocket_server.h
sources/: main.cpp  websocket_server.cpp
